// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@handl/cache-manager the resolveQuery method a simple query when caching is done through cascading cache control then the cache should contain the correct data 1`] = `
Object {
  "entries": Array [
    Array [
      "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    ],
    Array [
      "dataEntities::Organization:MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    ],
    Array [
      "queryResponses::651f14b3df12bef942ed3b1ba9e7f1f1",
      Object {
        "cacheMetadata": Object {
          "query": Object {
            "cacheControl": Object {
              "maxAge": 5,
              "public": true,
            },
            "etag": undefined,
            "ttl": 1550528652317,
          },
          "query.organization": Object {
            "cacheControl": Object {
              "maxAge": 5,
              "public": true,
            },
            "etag": undefined,
            "ttl": 1550528652317,
          },
        },
        "data": Object {
          "organization": Object {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook",
          },
        },
      },
    ],
  ],
  "metadata": Array [
    Object {
      "accessedCount": 0,
      "added": 1550528647324,
      "cacheability": Cacheability {
        "metadata": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 1550528652324,
        },
      },
      "key": "dataEntities::Organization:MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "lastAccessed": 1550528647324,
      "lastUpdated": 1550528647324,
      "size": 410,
      "tags": Array [],
      "updatedCount": 0,
    },
    Object {
      "accessedCount": 0,
      "added": 1550528647324,
      "cacheability": Cacheability {
        "metadata": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 1550528652324,
        },
      },
      "key": "queryResponses::651f14b3df12bef942ed3b1ba9e7f1f1",
      "lastAccessed": 1550528647324,
      "lastUpdated": 1550528647324,
      "size": 678,
      "tags": Array [],
      "updatedCount": 0,
    },
    Object {
      "accessedCount": 0,
      "added": 1550528647323,
      "cacheability": Cacheability {
        "metadata": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 1550528652323,
        },
      },
      "key": "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      "lastAccessed": 1550528647323,
      "lastUpdated": 1550528647323,
      "size": 410,
      "tags": Array [],
      "updatedCount": 0,
    },
  ],
}
`;

exports[`@handl/cache-manager the resolveQuery method a simple query when caching is done through cascading cache control then the method should return the correct response data 1`] = `
Object {
  "cacheMetadata": Map {
    "query" => Cacheability {
      "metadata": Object {
        "cacheControl": Object {
          "maxAge": 5,
          "public": true,
        },
        "etag": undefined,
        "ttl": 1550528652317,
      },
    },
    "query.organization" => Cacheability {
      "metadata": Object {
        "cacheControl": Object {
          "maxAge": 5,
          "public": true,
        },
        "etag": undefined,
        "ttl": 1550528652317,
      },
    },
  },
  "data": Object {
    "organization": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
}
`;

exports[`@handl/cache-manager the resolveQuery method a simple query when caching is done through type cache directives then the cache should contain the correct data 1`] = `
Object {
  "entries": Array [
    Array [
      "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    ],
    Array [
      "dataEntities::Organization:MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      Object {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    ],
    Array [
      "queryResponses::651f14b3df12bef942ed3b1ba9e7f1f1",
      Object {
        "cacheMetadata": Object {
          "query": Object {
            "cacheControl": Object {
              "maxAge": 1,
              "public": true,
            },
            "etag": undefined,
            "ttl": 1550528648332,
          },
          "query.organization": Object {
            "cacheControl": Object {
              "maxAge": 1,
              "public": true,
            },
            "etag": undefined,
            "ttl": 1550528648332,
          },
        },
        "data": Object {
          "organization": Object {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook",
          },
        },
      },
    ],
  ],
  "metadata": Array [
    Object {
      "accessedCount": 0,
      "added": 1550528647332,
      "cacheability": Cacheability {
        "metadata": Object {
          "cacheControl": Object {
            "maxAge": 1,
            "public": true,
          },
          "etag": undefined,
          "ttl": 1550528648332,
        },
      },
      "key": "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      "lastAccessed": 1550528647332,
      "lastUpdated": 1550528647332,
      "size": 410,
      "tags": Array [],
      "updatedCount": 0,
    },
    Object {
      "accessedCount": 0,
      "added": 1550528647332,
      "cacheability": Cacheability {
        "metadata": Object {
          "cacheControl": Object {
            "maxAge": 1,
            "public": true,
          },
          "etag": undefined,
          "ttl": 1550528648332,
        },
      },
      "key": "dataEntities::Organization:MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "lastAccessed": 1550528647332,
      "lastUpdated": 1550528647332,
      "size": 410,
      "tags": Array [],
      "updatedCount": 0,
    },
    Object {
      "accessedCount": 0,
      "added": 1550528647332,
      "cacheability": Cacheability {
        "metadata": Object {
          "cacheControl": Object {
            "maxAge": 1,
            "public": true,
          },
          "etag": undefined,
          "ttl": 1550528648332,
        },
      },
      "key": "queryResponses::651f14b3df12bef942ed3b1ba9e7f1f1",
      "lastAccessed": 1550528647332,
      "lastUpdated": 1550528647332,
      "size": 678,
      "tags": Array [],
      "updatedCount": 0,
    },
  ],
}
`;

exports[`@handl/cache-manager the resolveQuery method a simple query when caching is done through type cache directives then the method should return the correct response data 1`] = `
Object {
  "cacheMetadata": Map {
    "query" => Cacheability {
      "metadata": Object {
        "cacheControl": Object {
          "maxAge": 1,
          "public": true,
        },
        "etag": undefined,
        "ttl": 1550528648332,
      },
    },
    "query.organization" => Cacheability {
      "metadata": Object {
        "cacheControl": Object {
          "maxAge": 1,
          "public": true,
        },
        "etag": undefined,
        "ttl": 1550528648332,
      },
    },
  },
  "data": Object {
    "organization": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
}
`;
